--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,6 @@
     "strictFunctionTypes": true
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": ["**/*.test.tsx"]
 }
