--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "rickmortyapi": "^2.3.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.3.1",
-    "@testing-library/react": "^16.0.0",
     "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
