--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/dom": "^10.3.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^9.0.11",
     "jsdom": "^24.1.0",
+    "msw": "^2.3.4",
     "prettier": "^3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
